add github secret

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/card.jpg", "dest": "/src/card.ts" }]
+  "routes": [{ "src": "/card.jpg", "dest": "/src/card.ts" }],
+  "env": {
+    "GITHUB_GRAPHQL_TOKEN": "@github_graphql_token"
+  }
 }
