--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "playwright": "^1.7.1"
+    "playwright-aws-lambda": "^0.6.0",
+    "playwright-core": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
