--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chrome-aws-lambda": "^5.5.0",
+    "puppeteer": "^5.5.0",
     "puppeteer-core": "^5.5.0"
   },
   "devDependencies": {
