--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "builds": [
+    {
+      "src": "src/card.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [{ "src": "/card.jpg", "dest": "/src/card.ts" }],
   "env": {
     "GITHUB_GRAPHQL_TOKEN": "@github_graphql_token"
