move to api folder

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "builds": [
     {
-      "src": "src/card.ts",
+      "src": "api/card.ts",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/card.jpg", "dest": "/src/card.ts" }],
+  "routes": [{ "src": "/card.jpg", "dest": "/api/card.ts" }],
   "env": {
     "GITHUB_GRAPHQL_TOKEN": "@github_graphql_token"
   }
