--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
+    "@types/puppeteer": "^5.4.2",
     "typescript": "^4.1.3"
   },
   "prettier": {
