remove build change output dir to public

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "public",
     "module": "commonjs",
     "target": "esnext",
     "moduleResolution": "node",
