add second route

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "routes": [{ "src": "/card.jpg", "dest": "/api/card.ts" }],
+  "routes": [
+    { "src": "/card.jpg", "dest": "/api/card.ts" },
+    { "src": "/contributions.jpg", "dest": "/api/card.ts" }
+  ],
   "env": {
     "GITHUB_GRAPHQL_TOKEN": "@github_graphql_token"
   }
