--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "routes": [
     { "src": "/pie.png", "dest": "/api/card.ts" },
+    { "src": "/card.png", "dest": "/api/card.ts" },
     { "src": "/heat.png", "dest": "/api/card.ts" }
   ],
   "env": {
