--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chrome-aws-lambda": "^5.5.0",
+    "contrast-color-generator": "^0.1.1",
     "puppeteer-core": "^5.5.0"
   },
   "devDependencies": {
