--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "routes": [
-    { "src": "/pie.png", "dest": "/api/card.ts" },
-    { "src": "/card.png", "dest": "/api/card.ts" },
-    { "src": "/heat.png", "dest": "/api/card.ts" }
+    { "src": "/pie.png", "dest": "/api/pie.ts" },
+    { "src": "/heat.png", "dest": "/api/heat.ts" }
   ],
   "env": {
     "ONE_GRAPH_APP_ID": "@one_graph_app_id",
